# plutus-conformance

./: .gitignore  .markdownlint.json  .typos.toml  CHANGELOG.md  README.md  STANDARDS.md  cabal.project  flake.nix  plutus-conformance.cabal
app/: Main.hs
output/complementbytestring/: complementbytestring-case-1.uplc  complementbytestring-case-2.uplc  complementbytestring-case-2.uplc.expected  complementbytestring-case-3.uplc  complementbytestring-case-3.uplc.expected
output/countsetbits/: countsetbits-case-1.uplc  countsetbits-case-2.uplc  countsetbits-case-3.uplc  countsetbits-case-4.uplc
output/findfirstsetbit/: findfirstsetbit-case-1.uplc  findfirstsetbit-case-2.uplc  findfirstsetbit-case-2.uplc.budget.expected  findfirstsetbit-case-3.uplc  findfirstsetbit-case-4.uplc
output/orbytestring/: orbytestring-case-1.uplc  orbytestring-case-10.uplc  orbytestring-case-10.uplc.expected  orbytestring-case-2.uplc  orbytestring-case-3.uplc  orbytestring-case-4.uplc  orbytestring-case-5.uplc  orbytestring-case-6.uplc  orbytestring-case-7.uplc  orbytestring-case-8.uplc  orbytestring-case-9.uplc
output/readbit/: readbit-case-1.uplc  readbit-case-10.uplc  readbit-case-11.uplc  readbit-case-12.uplc  readbit-case-13.uplc  readbit-case-14.uplc  readbit-case-15.uplc  readbit-case-2.uplc  readbit-case-3.uplc  readbit-case-4.uplc  readbit-case-5.uplc  readbit-case-6.uplc  readbit-case-7.uplc  readbit-case-8.uplc  readbit-case-9.uplc
output/replicatebyte/: replicatebyte-case-1.uplc  replicatebyte-case-2.uplc  replicatebyte-case-3.uplc  replicatebyte-case-4.uplc  replicatebyte-case-5.uplc  replicatebyte-case-6.uplc  replicatebyte-case-7.uplc  replicatebyte-case-8.uplc  replicatebyte-case-8.uplc.expected
output/rotatebytestring/: rotatebytestring-case-1.uplc  rotatebytestring-case-2.uplc  rotatebytestring-case-2.uplc.budget.expected  rotatebytestring-case-3.uplc  rotatebytestring-case-3.uplc.expected  rotatebytestring-case-4.uplc  rotatebytestring-case-5.uplc  rotatebytestring-case-6.uplc  rotatebytestring-case-6.uplc.expected  rotatebytestring-case-7.uplc  rotatebytestring-case-8.uplc  rotatebytestring-case-8.uplc.expected
output/shiftbytestring/: shiftbytestring-case-1.uplc  shiftbytestring-case-2.uplc  shiftbytestring-case-3.uplc  shiftbytestring-case-3.uplc.expected  shiftbytestring-case-4.uplc  shiftbytestring-case-4.uplc.expected  shiftbytestring-case-5.uplc  shiftbytestring-case-6.uplc  shiftbytestring-case-6.uplc.expected
output/writebits/: writebits-case-1.uplc  writebits-case-10.uplc  writebits-case-11.uplc  writebits-case-11.uplc.expected  writebits-case-12.uplc  writebits-case-12.uplc.expected  writebits-case-13.uplc  writebits-case-13.uplc.expected  writebits-case-14.uplc  writebits-case-14.uplc.expected  writebits-case-15.uplc  writebits-case-15.uplc.expected  writebits-case-16.uplc.expected  (+27 more)
src/: And.hs  Aux.hs  Complement.hs  CountSetBits.hs  FindFirstSetBit.hs  MyLib.hs  Or.hs  ReadBit.hs  Replicate.hs  Rotate.hs  Shift.hs  WriteBits.hs  Xor.hs
test/: Aux.hs  Main.hs
(+12 files in other folders)
