cabal-version:   3.0
name:            plutus-conformance
version:         0.0.0.1
license:         Apache-2.0
license-file:    LICENSE
author:          MLabs
maintainer:      mlabs@mlabs.city
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Aux
    Complement
    CountSetBits
    FindFirstSetBit
    Shift

  build-depends:
    , aeson
    , base                ^>=4.18.2.0
    , bytestring
    , data-default-class
    , filepath
    , mtl
    , plutus-core         ==1.31.0.0
    , prettyprinter
    , text

  hs-source-dirs:   src
  default-language: Haskell2010

executable driver
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , mtl
    , plutus-conformance

  hs-source-dirs:   app
  default-language: Haskell2010
